// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketStatus component closed ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <span
    id="change-status-button"
  >
    <ForwardRef
      onClick={[Function]}
      type="button"
    >
      check
    </ForwardRef>
  </span>
  <Tooltip
    placement="bottom"
    target="change-status-button"
  >
    Reopen (press O)
  </Tooltip>
</div>
`;

exports[`TicketStatus component open ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <span
    id="change-status-button"
  >
    <ForwardRef
      intent="secondary"
      onClick={[Function]}
      type="button"
    >
      <ButtonIconLabel
        icon="check"
      >
        Close
      </ButtonIconLabel>
    </ForwardRef>
  </span>
  <Tooltip
    placement="bottom"
    target="change-status-button"
  >
    Close (press C)
  </Tooltip>
</div>
`;
